--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   rustfmt:
-    if: !cancelled()
+    if: (!cancelled())
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
